采用新版的文件中心

--- a/QJY.WEB/ViewV5/AppPage/APP_ADD_WF.html
+++ b/QJY.WEB/ViewV5/AppPage/APP_ADD_WF.html
@@ -30,6 +30,7 @@
     <script src="/ViewV5/JS/WFJS.js?ver=20171215"></script>
     <script src="/ViewV5/JS/YSteps/Steps.js"></script>
     <script src="/ViewV5/JS/chosen/chosen.jquery.min.js"></script>
+    <script src="http://47.92.121.230:9100/Web/qj_upload.js?v=3"></script>
 
 
     <style>
