又改了一大堆问题

--- a/QJY.WEB/ViewV5/AppPage/GZBG/GZBG.html
+++ b/QJY.WEB/ViewV5/AppPage/GZBG/GZBG.html
@@ -44,7 +44,7 @@
     <div class="form-group">
         <label class="col-xs-2 control-label">附件</label>
         <div class="col-xs-9">
-            <input type="text" value="" class="span2  szhl_Upload form-control" ms-duplex="modelData.Files" />
+            <input type="text"  class="span2  szhl_Upload form-control" ms-duplex="modelData.Files" />
         </div>
     </div>
 
