--- a/QJY.WEB/View_Mobile/UI/UI_USERINFO.html
+++ b/QJY.WEB/View_Mobile/UI/UI_USERINFO.html
@@ -30,9 +30,8 @@
             var lg = $.loading({
                 content: '加载中...',
             })
-            $.post("/API/VIEWAPI.ashx?Action=XTGL_GetUserInfo&r=" + Math.random(), {}, function (data) {
+            $.getJSON("/API/VIEWAPI.ashx?Action=XTGL_GetUserInfo&r=" + Math.random(), {}, function (data) {
                 lg.hide();
-                var data = $.parseJSON(data);
                 if (data.ErrorMsg == "") {
                     userinfo.UserData = data.Result.User;
                     userinfo.QYData = data.Result.QYinfo;
