--- a/QJY.WEB/View_Mobile/UI/CRM/UI_CPGL_LIST.html
+++ b/QJY.WEB/View_Mobile/UI/CRM/UI_CPGL_LIST.html
@@ -193,7 +193,7 @@
                     event.stopPropagation();
                 }
                 $.confirm("确认要删除吗", function () {
-                    $.post('/API/VIEWAPI.ashx?Action=CRM_DELCPBYID', { "P1": el.ID }, function (result) {
+                    $.getJSON('/API/VIEWAPI.ashx?Action=CRM_DELCPBYID', { "P1": el.ID }, function (result) {
                         if (result.ErrorMsg == "") {
                             ComFunJS.winsuccess("删除成功");
                             model.ctData.remove(el);
