--- a/QJY.WEB/View_Mobile/UI/CRM/UI_KHLXR_LIST.html
+++ b/QJY.WEB/View_Mobile/UI/CRM/UI_KHLXR_LIST.html
@@ -288,7 +288,7 @@
             },
             delLXR: function (el) {
                 $.confirm("确认要删除吗", function () {
-                    $.post('/API/VIEWAPI.ashx?Action=CRM_DELKHLXR', { "P1": el.ID }, function (result) {
+                    $.getJSON('/API/VIEWAPI.ashx?Action=CRM_DELKHLXR', { "P1": el.ID }, function (result) {
                         if (result.ErrorMsg == "") {
                             ComFunJS.winsuccess("删除成功");
                             model.ctData.remove(el);
