--- a/QJY.WEB/View_Mobile/UI/UI_XXFB_LIST.html
+++ b/QJY.WEB/View_Mobile/UI/UI_XXFB_LIST.html
@@ -187,8 +187,7 @@
                     urlapi = "/API/VIEWAPI.ashx?ACTION=XXFB_SUREXXFB&r=" + Math.random();
                 }
                 ComFunJS.showSH("200", msg, function (nr) {
-                    $.post(urlapi, { P1: el.ID, P2: type, jy: nr }, function (result) {
-                        var result = $.parseJSON(result)
+                    $.getJSON(urlapi, { P1: el.ID, P2: type, jy: nr }, function (result) {
                         if ($.trim(result.ErrorMsg) == "") {
                             $.toast("已" + msg);
                             el.SHStatus = type;
@@ -206,9 +205,7 @@
 
         avalon.ready(function () {
 
-            $.post("/API/VIEWAPI.ashx?Action=XXFB_GETXXFBTYPELISTWX&r=" + Math.random(), { P1: strId }, function (data) {
-
-                var data = $.parseJSON(data);
+            $.getJSON("/API/VIEWAPI.ashx?Action=XXFB_GETXXFBTYPELISTWX&r=" + Math.random(), { P1: strId }, function (data) {
                 if (data.ErrorMsg == "") {
                     model.ctData = data.Result;
                     if (model.ctData.size() == 0) {
