--- a/QJY.WEB/View_Mobile/UI/UI_QYTX_LIST.html
+++ b/QJY.WEB/View_Mobile/UI/UI_QYTX_LIST.html
@@ -68,12 +68,13 @@
     <div class="page" id='pageindex2'>
         <div ms-include-src="/View_Mobile/UI/TEMP/{{modlecode}}.html?ver={{rdm}}" data-include-rendered='render1'></div>
     </div>
+    <script src="/View_Mobile/JS/layer/layer.m.js"></script>
     <script type='text/javascript' src='//g.alicdn.com/sj/lib/zepto/zepto.min.js' charset='utf-8'></script>
     <script>$.config = { autoInit: true }</script>
     <script type='text/javascript' src='//g.alicdn.com/msui/sm/0.5.8/js/sm.min.js' charset='utf-8'></script>
     <script src="http://res.wx.qq.com/open/js/jweixin-1.1.0.js"></script>
     <script src="/View_Mobile/JS/ComFunJS.js?jsver=20160425"></script> 
-    <script src="/View_Mobile/JS/avalon.min.js"></script>
+    <script src="/View_Mobile/JS/avalon1.47.js"></script>
     <script type="text/javascript">
         var model = avalon.define({
             $id: "QYTXLIST",
