--- a/QJY.WEB/View_Mobile/UI/UI_CAR_LIST.html
+++ b/QJY.WEB/View_Mobile/UI/UI_CAR_LIST.html
@@ -62,6 +62,7 @@
             </div>
         </nav>
     </div>
+    <script src="/View_Mobile/JS/layer/layer.m.js"></script>
     <script type='text/javascript' src='//g.alicdn.com/sj/lib/zepto/zepto.min.js' charset='utf-8'></script>
     <script type='text/javascript' src='//g.alicdn.com/msui/sm/0.5.8/js/sm.min.js' charset='utf-8'></script>
     <script type='text/javascript' src='//g.alicdn.com/msui/sm/0.5.8/js/sm-extend.min.js' charset='utf-8'></script>
